--- a/_posts/2020-01-30-numpy.md
+++ b/_posts/2020-01-30-numpy.md
@@ -3436,3 +3436,815 @@ print(np.ceil(a))
 
 ## 15、NumPy 算术函数
 
+NumPy 算术函数包含简单的加减乘除: **add()**，**subtract()**，**multiply()** 和 **divide()**。
+
+需要注意的是数组必须具有相同的形状或符合数组广播规则。
+
+```python
+import numpy as np
+
+# 第一个数组
+a = np.arange(9, dtype = np.float_).reshape(3, 3)
+print(a)
+
+# 第二个数组
+b = np.array([10, 10, 10])
+print(b)
+
+# a + b
+print(np.add(a, b))
+
+# a - b
+print(np.subtract(a, b))
+
+# a * b
+print(np.multiply(a, b))
+
+# a / b
+print(np.divide(a, b))
+```
+
+输出结果：
+
+```
+[[0. 1. 2.]
+ [3. 4. 5.]
+ [6. 7. 8.]]
+ 
+[10 10 10]
+
+[[10. 11. 12.]
+ [13. 14. 15.]
+ [16. 17. 18.]]
+ 
+[[-10.  -9.  -8.]
+ [ -7.  -6.  -5.]
+ [ -4.  -3.  -2.]]
+ 
+[[ 0. 10. 20.]
+ [30. 40. 50.]
+ [60. 70. 80.]]
+ 
+[[0.  0.1 0.2]
+ [0.3 0.4 0.5]
+ [0.6 0.7 0.8]]
+```
+
+### numpy.reciprocal()
+
+numpy.reciprocal() 函数返回参数逐元素的倒数。如 **1/4** 倒数为 **4/1**。
+
+```python
+import numpy as np
+
+a = np.array([0.25, 1.33, 1, 100])
+print(a)
+
+# 调用 reciprocal 函数
+print(np.reciprocal(a))
+```
+
+输出结果：
+
+```
+[  0.25   1.33   1.   100.  ]
+
+[4.        0.7518797 1.        0.01     ]
+```
+
+### numpy.power()
+
+numpy.power() 函数将第一个输入数组中的元素作为底数，计算它与第二个输入数组中相应元素的幂。
+
+```python
+import numpy as np
+
+a = np.array([10, 100, 1000])
+print(a)
+
+# 调用 power 函数
+print(np.power(a, 2))
+
+# 第二个数组
+b = np.array([1, 2, 3])
+
+# 再次调用 power 函数
+print(np.power(a, b))
+```
+
+输出结果：
+
+```
+[  10  100 1000]
+
+[    100   10000 1000000]
+
+[        10      10000 1000000000]
+```
+
+### numpy.mod()
+
+numpy.mod() 计算输入数组中相应元素的相除后的余数。 函数 numpy.remainder() 也产生相同的结果。
+
+```pyrhon
+import numpy as np
+
+a = np.array([10, 20, 30])
+b = np.array([3, 5, 7])
+
+#  调用 mod() 函数
+print(np.mod(a, b))
+
+# 调用 remainder() 函数
+print(np.remainder(a, b))
+```
+
+输出结果：
+
+```
+[1 0 2]
+
+[1 0 2]
+```
+
+## 16、NumPy 统计函数
+
+NumPy 提供了很多统计函数，用于从数组中查找最小元素，最大元素，百分位标准差和方差等。 函数说明如下：
+
+### numpy.amin() 和 numpy.amax()
+
+numpy.amin() 用于计算数组中的元素沿指定轴的最小值。
+
+numpy.amax() 用于计算数组中的元素沿指定轴的最大值。
+
+```python
+import numpy as np
+
+a = np.array([[3, 7, 5], [8, 4, 3], [2, 4, 9]])
+print(a)
+
+# 调用 amin() 函数
+print(np.amin(a, 1))
+print(np.amin(a, 0))
+
+# 调用 amax() 函数
+print(np.amax(a))
+print(np.amax(a, axis = 0))
+print(np.amax(a, axis = 1))
+```
+
+输出结果：
+
+```
+[[3 7 5]
+ [8 4 3]
+ [2 4 9]]
+ 
+[3 3 2]
+
+[2 4 3]
+
+9
+
+[8 7 9]
+
+[7 8 9]
+```
+
+### numpy.ptp()
+
+numpy.ptp()函数计算数组中元素最大值与最小值的差（最大值 - 最小值）
+
+```python
+import numpy as np
+
+a = np.array([[3, 7, 5], [8, 4, 3], [2, 4, 9]])
+print(a)
+
+# 调用 ptp() 函数
+print(np.ptp(a))
+
+# 沿轴 1 调用 ptp() 函数
+print(np.ptp(a, axis = 1))
+
+# 沿轴 0 调用 ptp() 函数
+print(np.ptp(a, axis = 0))
+```
+
+输出结果：
+
+```
+[[3 7 5]
+ [8 4 3]
+ [2 4 9]]
+
+7
+
+[4 5 7]
+
+[6 3 6]
+```
+
+### numpy.percentile()
+
+百分位数是统计中使用的度量，表示小于这个值的观察值的百分比。 函数numpy.percentile()接受以下参数
+
+```python
+numpy.percentile(a, q, axis)
+```
+
+参数说明：
+
+- a：输入数组
+- q：要计算的百分位，在 0 ~ 100 之间
+- axis：沿着它计算百分位数的轴
+
+**首先要明确百分位**
+
+第 p 个百分位数是这样一个值，它使得至少有 p% 的数据项小于或等于这个值，且至少有 (100 - p)% 的数据项大于或等于这个值。
+
+举个例子：高等院校的入学考试成绩经常以百分位数的形式报告。比如，假设某个考生在入学考试中的语文部分的原始分数为 54 分。相对于参加同一考试的其他学生来说，他的成绩如何并不容易知道。但是如果原始分数 54 分恰好对应的是第 70 百分位数，我们就能知道大约 70% 的学生的考分比他低，而约 30% 的学生考分比他高。
+
+这里的 p = 70。
+
+```python
+import numpy as np
+
+a = np.array([[10, 7, 4], [3, 2, 1]])
+print(a)
+
+# 调用 percentile() 函数
+# 50% 的百分位，就是 a 里排序之后的中位数
+print(np.percentile(a, 50))
+
+# axis = 0, 在纵列上求
+print(np.percentile(a, 50, axis = 0))
+
+# axis = 1, 在横行上求
+print(np.percentile(a, 50, axis = 1))
+
+# 保持维度不变
+print(np.percentile(a, 50, axis = 1, keepdims = True))
+```
+
+输出结果：
+
+```
+[[10  7  4]
+ [ 3  2  1]]
+ 
+3.5
+
+[6.5 4.5 2.5]
+
+[7. 2.]
+
+[[7.]
+ [2.]]
+```
+
+### numpy.median()
+
+numpy.median() 函数用于计算数组 a 中元素的中位数（中值）
+
+```python
+import numpy as np
+
+a = np.array([[30, 65, 70], [80, 95, 60], [50, 90, 60]])
+print(a)
+
+# 调用 median() 函数
+print(np.median(a))
+
+# 沿轴 0 调用 median() 函数
+print(np.median(a, axis = 0))
+
+# 沿轴 1 调用 median() 函数
+print(np.median(a, axis = 1))
+```
+
+输出结果：
+
+```
+[[30 65 70]
+ [80 95 60]
+ [50 90 60]]
+ 
+65.0
+
+[50. 90. 60.]
+
+[65. 80. 60.]
+```
+
+### numpy.mean()
+
+numpy.mean() 函数返回数组中元素的算术平均值。 如果提供了轴，则沿其计算。
+
+算术平均值是沿轴的元素的总和除以元素的数量。
+
+```python
+import numpy as np
+
+a = np.array([[1, 2, 3], [3, 4, 5], [4, 5, 6]])
+print(a)
+
+# 调用 mean() 函数
+print(np.mean(a))
+
+# 沿轴 0 调用 mean() 函数
+print(np.mean(a, axis = 0))
+
+# 沿轴 0 调用 mean() 函数
+print(np.mean(a, axis = 1))
+```
+
+输出结果：
+
+```
+[[1 2 3]
+ [3 4 5]
+ [4 5 6]]
+ 
+3.6666666666666665
+
+[2.66666667 3.66666667 4.66666667]
+
+[2. 4. 5.]
+```
+
+### numpy.average()
+
+numpy.average() 函数根据在另一个数组中给出的各自的权重计算数组中元素的加权平均值。
+
+该函数可以接受一个轴参数。 如果没有指定轴，则数组会被展开。
+
+加权平均值即将各数值乘以相应的权数，然后加总求和得到总体值，再除以总的单位数。
+
+考虑数组[1,2,3,4]和相应的权重[4,3,2,1]，通过将相应元素的乘积相加，并将和除以权重的和，来计算加权平均值。
+
+```
+加权平均数 = (1*4 + 2*3 + 3*2 + 4*1) / (4 + 3 + 2 + 1)
+```
+
+```python
+import numpy as np
+
+a = np.array([1, 2, 3, 4])
+print(a)
+
+# 调用 average() 函数
+# 不指定权重时相当于 mean 函数
+print(np.average(a))
+
+wts = np.array([4, 3, 2, 1])
+# 再次调用 average() 函数
+print(np.average(a, weights = wts))
+
+# 如果 returned 参数设为 true，则返回权重的和
+print(np.average([1, 2, 3, 4], weights = [4, 3, 2, 1], returned = True))
+```
+
+输出结果：
+
+```
+[1 2 3 4]
+
+2.5
+
+2.0
+
+(2.0, 10.0)
+```
+
+在多维数组中，可以指定用于计算的轴
+
+```python
+import numpy as np
+
+a = np.arange(6).reshape(3, 2)
+print(a)
+
+# 修改后
+wt = np.array([3, 5])
+print(np.average(a, axis = 1, weights = wt))
+
+#  修改后
+print(np.average(a, axis = 1, weights = wt, returned = True))
+```
+
+输出结果：
+
+```
+[[0 1]
+ [2 3]
+ [4 5]]
+ 
+[0.625 2.625 4.625]
+
+(array([0.625, 2.625, 4.625]), array([8., 8., 8.]))
+```
+
+## 标准差
+
+标准差是一组数据平均值分散程度的一种度量。
+
+标准差是方差的算术平方根。
+
+标准差公式如下：
+
+```
+std = sqrt(mean((x - x.mean()) ** 2))
+```
+
+如果数组是 [1，2，3，4]，则其平均值为 2.5。 因此，差的平方是 [2.25,0.25,0.25,2.25]，并且其平均值的平方根除以 4，即 sqrt(5/4) ，结果为 1.1180339887498949。
+
+```python
+import numpy as np
+
+print(np.std([1, 2, 3, 4]))
+```
+
+输出结果：
+
+```
+1.118033988749895
+```
+
+### 方差
+
+统计中的方差（样本方差）是每个样本值与全体样本值的平均数之差的平方值的平均数，即 mean((x - x.mean())** 2)。
+
+换句话说，标准差是方差的平方根。
+
+```python
+import numpy as np
+
+print(np.var([1, 2, 3, 4]))
+```
+
+输出结果：
+
+```
+1.25
+```
+
+## 17、NumPy 排序、条件刷选函数
+
+NumPy 提供了多种排序的方法。 这些排序函数实现不同的排序算法，每个排序算法的特征在于执行速度，最坏情况性能，所需的工作空间和算法的稳定性。 下表显示了三种排序算法的比较。
+
+| 种类                 | 速度 | 最坏情况    | 工作空间 | 稳定性 |
+| -------------------- | ---- | ----------- | -------- | ------ |
+| 'quicksort' 快速排序 | 1    | O(n^2)      | 0        | 否     |
+| 'mergesort' 归并排序 | 2    | O(n*log(n)) | ~n/2     | 是     |
+| 'heapsort' 堆排序    | 3    | O(n*log(n)) | 0        | 否     |
+
+### numpy.sort()
+
+numpy.sort() 函数返回输入数组的排序副本。函数格式如下：
+
+```python
+numpy.sort(a, axis, kind, order)
+```
+
+参数说明：
+
+- a：要沿着数组
+- axis：沿着它排序数组的轴，如果没有数组会被展开，沿着最后的轴排序，axis = 0 按列排序，axis = 1按行排序
+- kind：默认为 'quicksort'
+- order：如果数组包含字段，则是要排序的字段
+
+```python
+import numpy as np
+
+a = np.array([[3, 7], [9, 1]])
+print(a)
+
+# 调用 sort() 函数
+print(np.sort(a))
+
+# 按列排序
+print(np.sort(a, axis = 0))
+
+# 在 sort() 函数中排序字段
+dt = np.dtype([('name', 'S10'), ('age', int)])
+a = np.array([('raju', 21), ('anil', 25), ('ravi', 17), ('amar', 27)], dtype = dt)
+print(a)
+
+# 按 name 排序
+print(np.sort(a, order = 'name'))
+```
+
+输出结果：
+
+```
+[[3 7]
+ [9 1]]
+ 
+[[3 7]
+ [1 9]]
+
+[[3 1]
+ [9 7]]
+
+[(b'raju', 21) (b'anil', 25) (b'ravi', 17) (b'amar', 27)]
+
+[(b'amar', 27) (b'anil', 25) (b'raju', 21) (b'ravi', 17)]
+```
+
+### numpy.argsort()
+
+numpy.argsort() 函数返回的是数组值从小到大的索引值。
+
+```python
+import numpy as np
+
+x = np.array([3, 1, 2])
+print(x)
+
+# 对 x 调用 argsort() 函数
+y = np.argsort(x)
+print(y)
+
+# 以排序后的顺序重构原数组
+print(x[y])
+
+# 使用循环重构原数组
+for i in y:
+    print(x[i], end = ' ')
+```
+
+输出结果：
+
+```
+[3 1 2]
+
+[1 2 0]
+
+[1 2 3]
+
+1 2 3 
+```
+
+### numpy.lexsort()
+
+numpy.lexsort() 用于对多个序列进行排序。把它想象成对电子表格进行排序，每一列代表一个序列，**排序时优先照顾靠后的列**
+
+这里举一个应用场景：小升初考试，重点班录取学生按照总成绩录取。在总成绩相同时，数学成绩高的优先录取，在总成绩和数学成绩都相同时，按照英语成绩录取…… 这里，总成绩排在电子表格的最后一列，数学成绩在倒数第二列，英语成绩在倒数第三列。
+
+```python
+import numpy as np
+
+nm = ('raju', 'amil', 'ravi', 'amar')
+dv = ('f.y.', 's.y.', 's.y.', 'f.y.')
+# 调用 lexsort() 函数
+ind = np.lexsort((dv, nm))
+print(ind)
+
+# 使用这个索引来获取排序后的数据
+print([nm[i] + ' ' + dv[i] for i in ind])
+```
+
+输出结果：
+
+```
+[3 1 0 2]
+
+['amar f.y.', 'amil s.y.', 'raju f.y.', 'ravi s.y.']
+```
+
+上面传入 np.lexsort 的是一个tuple，排序时首先排 nm，顺序为：amar、anil、raju、ravi 。综上排序结果为 [3 1 0 2]。
+
+### msort、sort_complex、partition、argpartition
+
+| 函数                                      | 描述                                                         |
+| :---------------------------------------- | :----------------------------------------------------------- |
+| msort(a)                                  | 数组按第一个轴排序，返回排序后的数组副本。np.msort(a) 相等于 np.sort(a, axis=0)。 |
+| sort_complex(a)                           | 对复数按照先实部后虚部的顺序进行排序。                       |
+| partition(a, kth[, axis, kind, order])    | 指定一个数，对数组进行分区                                   |
+| argpartition(a, kth[, axis, kind, order]) | 可以通过关键字 kind 指定算法沿着指定轴对数组进行分区         |
+
+**复数排序：**
+
+```python
+import numpy as np
+
+# 调用 sort_complex() 函数
+print(np.sort_complex([5, 3, 6, 2, 1]))
+print(np.sort_complex([1 + 2.0j, 2 - 1j, 3 - 2j, 3 - 3j, 3 + 5j]))
+```
+
+输出结果：
+
+```
+[1.+0.j 2.+0.j 3.+0.j 5.+0.j 6.+0.j]
+
+[1.+2.j 2.-1.j 3.-3.j 3.-2.j 3.+5.j]
+```
+
+**partition() 分区排序：**
+
+```python
+import numpy as np
+
+a = np.array([3, 4, 2, 1])
+# 将数组 a 中所有元素（包括重复元素）从小到大排列，3 表示的是排序数组索引为 3 的数字，比该数字小的排在该数字前面，比该数字大的排在该数字的后面
+print(np.partition(a, 3))
+
+# 小于 1 的在前面，大于 3 的在后面，1和3之间的在中间
+print(np.partition(a, (1, 3)))
+```
+
+输出结果：
+
+```
+[2 1 3 4]
+
+[1 2 3 4]
+```
+
+找到数组的第 3 小（index=2）的值和第 2 大（index=-2）的值
+
+```python
+import numpy as np
+
+arr = ([46, 57, 23, 39, 1, 10, 0, 120])
+
+# 调用 argpartition() 函数
+print(arr[np.argpartition(arr, 2)[2]])
+print(arr[np.argpartition(arr, -2)[-2]])
+```
+
+输出结果：
+
+```
+10
+
+57
+```
+
+同时找到第 3 和第 4 小的值。注意这里，用 [2,3] 同时将第 3 和第 4 小的排序好，然后可以分别通过下标 [2] 和 [3] 取得
+
+```python
+import numpy as np
+
+arr = ([46, 57, 23, 39, 1, 10, 0, 120])
+
+# 调用 argpartition() 函数
+print(arr[np.argpartition(arr, [2, 3])[2]])
+print(arr[np.argpartition(arr, [2, 3])[3]])
+```
+
+输出结果：
+
+```
+10
+
+23
+```
+
+### numpy.argmax() 和 numpy.argmin()
+
+numpy.argmax() 和 numpy.argmin() 函数分别沿给定轴返回最大和最小元素的索引
+
+```python
+import numpy as np
+
+a = np.array([[30, 40, 70], [80, 20, 10], [50, 90, 60]])
+print(a)
+
+# 展开数组
+print(a.flatten())
+
+# 调用 argmax() 函数
+print(np.argmax(a))
+
+# 沿轴 0 的最大值索引
+maxindex = np.argmax(a, axis = 0)
+print(maxindex)
+
+# 沿轴 1 的最大值索引
+maxindex = np.argmax(a, axis = 1)
+print(maxindex)
+
+# 调用 argmin() 函数
+minindex = np.argmin(a)
+print(minindex)
+
+# 沿轴 0 的最小值索引
+minindex = np.argmin(a, axis = 0)
+print(minindex)
+
+# 沿轴 1 的最小值索引
+minindex = np.argmin(a, axis = 1)
+print(minindex)
+```
+
+输出结果：
+
+```
+[[30 40 70]
+ [80 20 10]
+ [50 90 60]]
+ 
+[30 40 70 80 20 10 50 90 60]
+ 
+7
+
+[1 2 0]
+[2 0 1]
+
+5
+
+[0 1 1]
+[0 2 0]
+```
+
+### numpy.nonzero()
+
+numpy.nonzero() 函数返回输入数组中非零元素的索引
+
+```python
+import numpy as np
+
+a = np.array([[30, 40, 0], [0, 20, 10], [50, 0, 60]])
+print(a)
+
+# 调用 nonzero() 函数
+print(np.nonzero(a))
+```
+
+输出结果：
+
+```
+[[30 40  0]
+ [ 0 20 10]
+ [50  0 60]]
+ 
+(array([0, 0, 1, 1, 2, 2]), array([0, 1, 1, 2, 0, 2]))
+```
+
+### numpy.where()
+
+numpy.where() 函数返回输入数组中满足给定条件的元素的索引。
+
+```python
+import numpy as np
+
+x = np.arange(9.).reshape(3, 3)
+print(x)
+
+# 大于 3 的元素的索引
+y = np.where(x > 3)
+print(y)
+
+# 使用这些索引来获取满足条件的元素
+print(x[y])
+```
+
+输出结果：
+
+```
+[[0. 1. 2.]
+ [3. 4. 5.]
+ [6. 7. 8.]]
+ 
+(array([1, 1, 2, 2, 2]), array([1, 2, 0, 1, 2]))
+
+[4. 5. 6. 7. 8.]
+```
+
+### numpy.extract()
+
+numpy.extract() 函数根据某个条件从数组中抽取元素，返回满条件的元素
+
+```python
+import numpy as np
+
+x = np.arange(9.).reshape(3, 3)
+print(x)
+
+# 定义条件, 选择偶数元素
+condition = np.mod(x, 2) == 0
+
+# 按元素的条件值
+print(condition)
+
+# 使用条件提取元素
+print(np.extract(condition, x))
+```
+
+输出结果：
+
+```
+[[0. 1. 2.]
+ [3. 4. 5.]
+ [6. 7. 8.]]
+ 
+[[ True False  True]
+ [False  True False]
+ [ True False  True]]
+ 
+[0. 2. 4. 6. 8.]
+```
+
